--- a/simpleUsers/public/admin.html
+++ b/simpleUsers/public/admin.html
@@ -7,5 +7,17 @@
 </head>
 <body>
     <h2>This is Admin page. Only accessible to users with the  'admin' role.</h2>
+    <button onclick="logout()">Logout</button>
+    <script>
+        const role = localStorage.getItem("role");
+        if (role !== "admin") {
+            alert("Access denied. Redirecting to login page.");
+            window.location.href = "/index.html";
+        }
+        function logout() {
+            localStorage.removeItem("role");
+            window.location.href = "/index.html";
+        }
+    </script>
 </body>
 </html>
