--- a/simpleUsers/public/index.html
+++ b/simpleUsers/public/index.html
@@ -34,6 +34,11 @@
         const json = await res.json();
 
         if (json.success) {
+            // Store a simple token (for demonstration purposes)
+            // In a real application, use secure methods to handle token
+            // Записать токен в localStorage
+            // В живом приложении используй безопасные методы для обработки токенов!
+            localStorage.setItem("role", json.role);
             //Role-based redirest
             switch (json.role) {
                 case "admin":
