--- a/simpleUsers/public/admin.html
+++ b/simpleUsers/public/admin.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Page</title>
-    <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="/css/header.css">
 </head>
 <body>
     <div id="header" class="header"></div>
