--- a/simpleUsers/public/admin.html
+++ b/simpleUsers/public/admin.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="/css/header.css">
 </head>
 <body>
-    <div id="header" class="header"></div>
+    <div id="header" class="header">
+        <div class="header-left" id="header-left"></div>
+        <div class="header-right" id="header-right"></div>
+    </div>
     <script src="/js/header.js"></script>
     <script>loadHeader()</script>
     <h2>This is Admin page. Only accessible to users with the  'admin' role.</h2>
