изменение кнопки  аккаунта

--- a/simpleUsers/public/admin.html
+++ b/simpleUsers/public/admin.html
@@ -7,17 +7,20 @@
     <link rel="stylesheet" href="/css/header.css">
 </head>
 <body>
+    <!--header Section-->
+    <!--<div id="header" class="header">-->
     <div id="header" class="header">
         <div class="header-left" id="header-left"></div>
         <div class="header-right" id="header-right"></div>
     </div>
     <script src="/js/header.js"></script>
     <script>loadHeader()</script>
+
     <h2>This is Admin page. Only accessible to users with the  'admin' role.</h2>
-    <button onclick="logout()">Logout</button>
+    <!--<button onclick="logout()">Logout</button>
     <button onclick="location.href='/adminpanel.html'">Go to Admin Panel</button>
     <button onclick="location.href='/index.html'">Go to Home Page</button>
-    <button onclick="location.href='/crafts.html'">Go to Crafts Page</button>
+    <button onclick="location.href='/crafts.html'">Go to Crafts Page</button> -->
 </body>
     <script>
         async function checkAccess() {
