--- a/simpleUsers/public/adminpanel.html
+++ b/simpleUsers/public/adminpanel.html
@@ -4,8 +4,17 @@
   <meta charset="UTF-8">
   <title>Admin Panel</title>
   <link rel="stylesheet" href="/css/admin.css">
+  <link rel="stylesheet" href="/css/header.css">
 </head>
 <body>
+    <!--header Section-->
+    <!--<div id="header" class="header">-->
+    <div id="header" class="header">
+        <div class="header-left" id="header-left"></div>
+        <div class="header-right" id="header-right"></div>
+    </div>
+    <script src="/js/header.js"></script>
+    <script>loadHeader()</script>
   <h2>Admin Panel</h2>
   <p id="status">Checking access...</p>
 
