--- a/simpleUsers/public/crafts.html
+++ b/simpleUsers/public/crafts.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sea Crafts</title>
+    <link rel="stylesheet" href="/css/header.css">
     <style>
         ul {
             list-style: none;
@@ -23,10 +24,19 @@
     </style>
 </head>
 <body>
+    <!--header Section-->
+    <!--<div id="header" class="header">-->
+    <div id="header" class="header">
+        <div class="header-left" id="header-left"></div>
+        <div class="header-right" id="header-right"></div>
+    </div>
+    <script src="/js/header.js"></script>
+    <script>loadHeader()</script>
+    
     <h2>List of Sea Crafts</h2>
 
     <ul id="craftList"></ul>
-
+    
     <script>
         async function loadCrafts() {
             const res = await fetch("/seaCrafts");
