--- a/simpleUsers/public/editor.html
+++ b/simpleUsers/public/editor.html
@@ -4,8 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Editor Page</title>
+   <link rel="stylesheet" href="/css/header.css">
 </head>
 <body>
+    <!--header Section-->
+    <!--<div id="header" class="header">-->
+    <div id="header" class="header">
+        <div class="header-left" id="header-left"></div>
+        <div class="header-right" id="header-right"></div>
+    </div>
+    <script src="/js/header.js"></script>
+    <script>loadHeader()</script>
+    
     <h2>This is Editor page. Only accessible to users with the  'editor' role.</h2>
     <script>
         async function checkAccess() {
