--- a/simpleUsers/public/adminpanel.html
+++ b/simpleUsers/public/adminpanel.html
@@ -31,8 +31,6 @@
       <tbody></tbody>
   </table>
 
-  
-
   <div class="modal-bg" id="modal-bg">
         <div class="modal">
             <h3>Change Password</h3>
@@ -49,54 +47,14 @@
 
     <script type="module">
         import { checkAccess } from "/js/checkAdminAccess.js";
+        import { loadUsers } from "/js/loadUsers.js";
+        import { submitPasswordChange } from "/js/passwordChange.js";
+
         checkAccess();
     </script>
 
     <script>
         let selectedUser = null;
-
-        /*async function checkAccess() {
-            const token = localStorage.getItem("authToken");
-            if (!token) return redirect();
-
-            const verifyRes = await fetch("/verify", {
-                method: "POST",
-                headers: { "Content-Type": "application/json" },
-                body: JSON.stringify({ token })
-            });
-
-            const verifyJson = await verifyRes.json();
-            if (!verifyJson.valid || verifyJson.role !== "admin") {
-                return redirect();
-            }
-
-            document.getElementById("status").textContent = "Access granted";
-            
-            loadUsers(token);
-        }*/
-   
-        /*async function loadUsers(token) {
-        const res = await fetch("/users", {
-            method: "POST",
-            headers: { "Content-Type": "application/json" },
-            body: JSON.stringify({ token })
-        });
-
-        const users = await res.json();
-        const tbody = document.querySelector("#userTable tbody");
-        tbody.innerHTML = "";
-
-        Object.entries(users).forEach(([username, data]) => {
-            const tr = document.createElement("tr");
-
-            tr.innerHTML = `
-                <td>${username}</td>
-                <td>${data.role}</td>
-                <td><button onclick="openModal('${username}')">Change Password</button></td>
-            `;
-            tbody.appendChild(tr);
-        });
-        }*/
 
     function openModal(username) {
         selectedUser = username;
@@ -108,33 +66,7 @@
     function closeModal() {
         document.getElementById("modal-bg").style.display = "none";
     }
-
-    async function submitPasswordChange() {
-        const newPassword = document.getElementById("modal-password").value;
-        const token = localStorage.getItem("authToken");
-
-        const res = await fetch("/users/change-password", {
-            method: "POST",
-            headers: { "Content-Type": "application/json" },
-            body: JSON.stringify({
-                token,
-                username: selectedUser,
-                newPassword
-            })
-        });
-
-        const data = await res.json();
-        const result = document.getElementById("modal-result");
-
-        if (data.success) {
-            result.style.color = "green";
-            result.textContent = data.message;
-        } else {
-            result.style.color = "red";
-            result.textContent = data.error || "Something went wrong";
-        }
-    }
-
+    
     function redirect() {
         window.location.href = "/index.html";
     }
@@ -144,7 +76,6 @@
         redirect();
     }
 
-    checkAccess();   
     </script>
 </body>
 </html>
