--- a/simpleUsers/public/profile.html
+++ b/simpleUsers/public/profile.html
@@ -1,64 +1,60 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Profile</title>
-  <link rel="stylesheet" href="/css/header.css">
-  <link rel="stylesheet" href="/css/profile.css">
-  <script src="/js/header.js"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Profile</title>
+
+    <link rel="stylesheet" href="/css/header.css">
+    <link rel="stylesheet" href="/css/profile.css">
+    <script src="/js/header.js"></script>
 </head>
-
 <body>
-
-  <div id="header" class="header">
-    <div id="header-left" class="header-left"></div>
-    <div id="header-right" class="header-right"></div>
-  </div>
-
-  <div class="profile-container">
-    <h2>Your Profile</h2>
-
-    <div class="profile-card">
-      <div class="profile-row">
-        <label>First Name:</label>
-        <span id="firstName"></span>
-      </div>
-
-      <div class="profile-row">
-        <label>Last Name:</label>
-        <span id="lastName"></span>
-      </div>
-
-      <div class="profile-row">
-        <label>Email:</label>
-        <span id="email"></span>
-      </div>
-
-      <div class="profile-row">
-        <label>Description:</label>
-        <span id="description"></span>
-      </div>
-      <!-- Avatar Section -->
-      <div class="profile-avatar-section">
-      <img id="avatarPreview" class="avatar-large" src="" alt="Avatar">
-
-        <form id="avatarForm">
-          <input type="file" id="avatarInput" name="avatar" accept="image/*">
-          <button class="upload-button" type="submit">Upload New Avatar</button>
-        </form>
-      </div>
-
+    <div id="header" class="header">
+        <div id="header-left" class="header-left"></div>
+        <div id="header-right" class="header-right"></div>
     </div>
-  </div>
+    <div class="profile-container">
+        <h2>Your Profile</h2>
 
-  <script type="module">
-    import { initAvatarUpload } from "/js/avatarUpload.js";
-    import { loadProfile } from "/js/loadProfile.js";
+        <div class="profile-card">
+            <div class="profile-row">
+                <label>First Name:</label>
+                <span id="firstName"></span>
+            </div>
 
-    loadHeader();
-    loadProfile();
-    initAvatarUpload();
-  </script>
+            <div class="profile-row">
+                <label>Last Name:</label>
+                <span id="lastName"></span>
+            </div>
 
+            <div class="profile-row">
+                <label>Email:</label>
+                <span id="email"></span>
+            </div>
+
+            <div class="profile-row">
+                <label>Description:</label>
+                <span id="description"></span>
+            </div>
+
+            <div class="profile-avatar-section"></div>
+            <img id="avatarPreview" class="avatar-large" src="" alt="Avatar">
+
+            <form id="avatarForm">
+                <input type="avatarInput" name="avatar" accept="image/*">
+                <button class="upioad-button" type="submit">Upload new Avatar</button>
+            </form>
+        </div>
+    </div>
+
+    <script type="module">
+        import { initAvatarUpload } from "/js/avatarUpload.js";
+        import { loadProfile } from "/js/loadProfile.js";
+
+        loadHeader();
+        loadProfile();
+        initAvatarUpload();
+    </script>
 </body>
 </html>
