--- a/simpleUsers/public/profile.html
+++ b/simpleUsers/public/profile.html
@@ -5,7 +5,7 @@
   <title>Profile</title>
   <link rel="stylesheet" href="/css/header.css">
   <link rel="stylesheet" href="/css/profile.css">
-  <script src="/js/header.js"></script>
+  <!--<script src="/js/header.js"></script>-->
 </head>
 
 <body>
@@ -54,6 +54,7 @@
   <script type="module">
     import { initAvatarUpload } from "/js/avatarUpload.js";
     import { loadProfile } from "/js/loadProfile.js";
+    import { loadHeader } from "/js/header.js";
 
     loadHeader();
     loadProfile();
