внесены правки в adminpanel.html: <button id="submitPasswordChange()">Submit</button> убраны скобки. Добавлено условие if  (document.getElementById("status")) { в checkAdminAccess.js

--- a/simpleUsers/public/adminpanel.html
+++ b/simpleUsers/public/adminpanel.html
@@ -41,7 +41,7 @@
             <input id="passwordNew" type="password">    
     
             <div class="modal-actions">
-                <button id="submitPasswordChange()">Submit</button>
+                <button id="submitPasswordChange">Submit</button>
                 <button id="closePasswordModal">Cancel</button>        
             </div>
 
